--- a/index.html
+++ b/index.html
@@ -4,16 +4,36 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Page Title</title>          
+    <title>S | M | A | M  WEB AGENCY</title>          
     <script src="./bootstrap/jquery.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"></script>
-    <script src="./bootstrap/bootstrap.min.js"></script>
-    <link rel="stylesheet" href="./bootstrap/bootstrap.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" media="screen" href="./css/style.css" />
     <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,700" rel="stylesheet">
 </head>
 <body>
-    
+    <nav class="navbar navbar-default">
+        <div class="container">
+          <div class="navbar-header">
+            <a class="navbar-brand" href="#">S | M | A | M </a>
+          </div>
+          <ul class="nav navbar-nav">
+            <li class="active"><a href="#">POČETNA</a></li>
+            <li><a href="o-nama.html">O NAMA</a></li>
+            <li><a href="projekti.html">PROJEKTI</a></li>
+            <li><a href="kontakt.html">KONTAKT</a></li>
+          </ul>
+        </div>
+      </nav>
+
+      <div class="container">
+          <div class="jumbotron">
+              <h1 class="text-center">S | M | A | M<br>WEB<br>AGENCY</h1>
+          </div>
+        <img class="img-responsive" src="images/home-smain.jpeg" alt="S | M | A | M home page image" width="1200px">
+
+    </div>
 
         <script src="./js/main.js"></script>  
 </body>
