--- a/projekti.html
+++ b/projekti.html
@@ -13,6 +13,22 @@
     <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,700" rel="stylesheet">
 </head>
 <body>
+    <h1 class="naspro">Projekti</h1>
+<div class="fleks">
+
+<div class="projekat">
+  <img class="slpro" src="https://via.placeholder.com/500x300" alt=""> 
+  
+  <p>Izrađujemo web sajt po najvišim kriterijumima koji ostavlja konkurenciju daleko ispod Vas.</p>
+</div>
+<div class="projekat"><img class="slpro" src="https://via.placeholder.com/500x300" alt="">
+<p>Vaš web sajt će biti savršeno prilagođen  računarima, tabletima i mobilnim telefonima.</p></div>
+<div class="projekat"><img class="slpro" src="https://via.placeholder.com/500x300" alt=""><p>Dizajniramo vizuelno atraktivan web sajt koji privlači posetioce i pretvara ih u klijente.</p></div>
+
+</div>
+
+
+
     
 
         <script src="./js/main.js"></script>  
