--- a/kontakt.html
+++ b/kontakt.html
@@ -1,20 +1,81 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Page Title</title>          
+    <title>Page Title</title>
     <script src="./bootstrap/jquery.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"></script>
-    <script src="./bootstrap/bootstrap.min.js"></script>
-    <link rel="stylesheet" href="./bootstrap/bootstrap.min.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
     <link rel="stylesheet" type="text/css" media="screen" href="./css/style.css" />
     <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,700" rel="stylesheet">
-</head>
-<body>
-    
 
-        <script src="./js/main.js"></script>  
+
+</head>
+
+<body>
+    <div col-md-6 img-thumbnail>
+        <div id="feedback">
+            <div class="container">
+
+                <div class="col-md-6">
+                    <h3 class="naslov">S|M|A|M</h3>
+                    <address class="adresa">
+                        <strong><p> Web agencija </p></strong>
+                        <br>
+                        <p> Tosin bunar 15 </p>
+                        <br>
+                        <p> 11000 </p>
+                        <br>
+                        <p> Beograd </p>
+                        <br>
+                        <p> Srbija </p>
+
+                        <br>
+                        <abbr title="Phone">P:</abbr> 011 567 890
+                    </address>
+                </div>
+
+
+                <div class="col-md-6">
+                    <div class="form-area">
+
+
+                        <form role="form">
+                            <br class="br">
+                            <h3 class="naslov">Contact Form</h3>
+                            <div class="form-group">
+                                <input type="text" class="form-control" id="name" name="name" placeholder="Name" required>
+                            </div>
+                            <div class="form-group">
+                                <input type="text" class="form-control" id="email" name="email" placeholder="Email" required>
+                            </div>
+                            <div class="form-group">
+                                <input type="text" class="form-control" id="address" name="address" placeholder="Address" required>
+                            </div>
+                            <div class="form-group">
+                                <input type="text" class="form-control" id="subject" name="subject" placeholder="Subject" required>
+                            </div>
+                            <div class="form-group">
+                                <textarea class="form-control" type="textarea" id="message" placeholder="Message" maxlength="140" rows="7"></textarea>
+                                <!-- <span class="help-block"><p id="characterLeft" class="help-block ">You have reached the limit</p></span>                     -->
+                            </div>
+
+                            <button type="button" id="submit" name="submit" class="btn btn-primary pull-right">Submit Form</button>
+                        </form>
+
+
+                    </div>
+                </div>
+            </div>
+        </div>
+
+
+
+        <script src="./js/main.js"></script>
 </body>
+
 </html>
