izmene na tekstu

--- a/o-nama.html
+++ b/o-nama.html
@@ -13,7 +13,15 @@
     <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,700" rel="stylesheet">
 </head>
 <body>
-    
+    <div class="jumbotron"><h1 class="naslov">O nama</h1></div>
+    <div class="container kontejner">
+         <p class="clanak">Mi volimo to što radimo i zato to i radimo tako dobro. Naš mali ali uigran tim i višegodišnje iskustvo u izradi sajtova za raznolike projekte su glavni razlozi zbog kojih možemo da tvrdimo da ste u sigurnim rukama. Za nas ne postoje mali i veliki klijenti – svi su jednako važni.</p>
+
+         <div class="slika">
+             <img src="https://www.moj-posao.net/data/files/jobs-elements/fina-novi-top.jpg" alt="Saradnici">
+         </div>
+    </div>
+   
 
         <script src="./js/main.js"></script>  
 </body>
